--- a/src/components/AppStoreItem/AppStoreItem.css
+++ b/src/components/AppStoreItem/AppStoreItem.css
@@ -30,7 +30,7 @@
 	width: 60px;
 	height: 60px;
 	border-radius: 12px;
-	opacity: 0;
+	opacity: 1;
 }
 .appstore-item .icon img.loaded {
 	opacity: 1;
@@ -123,5 +123,9 @@
 	.appstore-item h2 {
 		font-size: 24px;
 		margin-top: 12px;
+	}
+
+	.appstore-item .icon img {
+		opacity: 0;
 	}
 }
