--- a/src/components/CancelButton/CancelButton.css
+++ b/src/components/CancelButton/CancelButton.css
@@ -1,7 +1,7 @@
 .cancel-button {
 	position: absolute;
-	top: 17px;
-	right: 15px;
+	top: 13px;
+	right: 25px;
 	width: 24px;
 	height: 24px;
 	margin: 0;
@@ -14,4 +14,11 @@
 
 .cancel-button:focus, .cancel-button:active {
 	background-color: #bbb;
+}
+
+@media (min-width: 450px) {
+	.cancel-button {
+		top: 17px;
+		right: 15px;
+	}
 }
