--- a/src/components/Spinner/Spinner.css
+++ b/src/components/Spinner/Spinner.css
@@ -1,7 +1,8 @@
 .spinner {
 	position: absolute;
-	top: 18px;
-	right: 20px;
+    top: 14px;
+    right: 30px;
+    
 	width: 20px;
 	height: 20px;
 	margin: 0;
@@ -31,5 +32,12 @@
     to {
         -webkit-transform: rotate(360deg);
         transform: rotate(360deg);
+    }
+}
+
+@media (min-width: 450px) {
+    .spinner {
+        top: 18px;
+        right: 20px;
     }
 }
