--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,11 @@ body {
 	background-size: cover;
 	font-family: -apple-system, BlinkMacSystemFont, sans-serif;
 	margin: 0;
+	overflow: hidden;
+}
+
+body.listing-apps {
+	overflow: visible;
 }
 
 #root {
